$Id$

2021-01-06  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Western Digital Blue (SMR): 4TB.

2021-01-01  Christian Franke  <franke@computer.org>

	Happy New Year!  Update copyright year in version info.

2020-12-30  Christian Franke  <franke@computer.org>

	smartmontools 7.2

2020-12-30  Christian Franke  <franke@computer.org>

	configure.ac, update-smart-drivedb.in: Use RELEASE_7_2_DRIVEDB for
	drivedb.h updates.

	Create new branch RELEASE_7_2_DRIVEDB.

2020-12-29  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Micron 5100 Pro / 52x0 / 5300 SSDs: 5300HC.
	- Samsung based SSDs: PM871 MZY* (#1384), 870 QVO (#1388).
	- Silicon Motion based SSDs: ADATA IMSS332 (#1399),
	  ADATA SU650NS38 (#1386), JAJS600M1TB (#1414), NFN025SA31T.
	- Silicon Motion based OEM SSDs: Dogfish,
	  Intenso portable (GH issues/81, GH pull/82),
	  Intenso Sata III (#1412), KingDian S280 (#1402).
	- SK hynix SATA SSDs: SC300 (#1407).
	- Hitachi Travelstar 5K500.B: *SA02 (#1408).
	- Fix '-v' comments.  Remove trailing whitespace.

	scsinvme.cpp: Realtek: Limit NVMe log transfer size to 512 bytes.

2020-12-21  Christian Franke  <franke@computer.org>

	smartctl.8.in: Add EXPERIMENTAL notes for SCSI variants of
	'-n POWERMODE' and '-s standby,...'.  Fix syntax.

	update-smart-drivedb.in: Add 'Accept-Encoding' HTTP header when
	curl is used.  This avoids caching problems with svn URL.

	update-smart-drivedb.in: Print output of 'gpg --import' if '-v' is
	specified.

	update-smart-drivedb.in: Extend expiration year of current database
	signing key from 2020 to 2025 (#1278).

2020-12-20  Christian Franke  <franke@computer.org>

	configure.ac: Use AC_CONFIG_HEADERS instead of obsolete
	AC_CONFIG_HEADER.  This silences a warning from new autoconf 2.70.
	Print 'deprecated' warning for '--with-solaris-sparc-ata'.

	drivedb.h:
	- Intel X25-E SSDs: IBM OEM (#1401).
	- Seagate BarraCuda 3.5: 12TB
	- Seagate Exos X16: 10TB (#1406, GH issues/63), 12TB.