@@ -3,6 +3,7 @@ $Id$
 2021-01-06  Christian Franke  <franke@computer.org>
 
 	drivedb.h:
+	- Seagate BarraCuda 3.5: Split into ...(CMR) and ...(SMR).
 	- Western Digital Blue (SMR): 4TB.
 
 2021-01-01  Christian Franke  <franke@computer.org>
